test/link/script-excess-align-ofs.link
rom0
	align 1, 2
